[project]
name = "edgequant"
version = "0.1.0"
description = "Quantization + benchmarking harness that emits a precision decision table."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
# Wire these up as you implement each backend.
dev = ["pytest>=8"]
onnx = ["onnx>=1.16", "onnxruntime>=1.18"]
torch = ["torch>=2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
